terraform-k8s/orders/order-app-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-app
  namespace: iac-learning
  labels:
    app: order-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order-app
  template:
    metadata:
      labels:
        app: order-app
    spec:
      containers:
      - name: k8s-iac-order
        image: localhost:32000/order_service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
