terraform-k8s/orders/order-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: iac-learning
spec:
  type: NodePort
  selector:
    app: order-app
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
